2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): set up the vbox' child widgets in
	the proper order, so we don't have to reorder the box again

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): let maemo use the same variables
	for the menu as gnome does

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): updated indentation of the GNOME
	menu structure

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): adjusted the maemo menu to comply
	with the maemo style guidelines
	(http://test.maemo.org/community/hildon_ui.html)

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): merged the destroy handlers for the
	main window

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): share the "Quit" menu item between
	GNOME and Maemo

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_enabled_games_item),
	(ui_main_game_changed): merge the pause and resume handling code for
	GNOME and Maemo

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): share the "Join network game" menu
	item between Maemo and GNOME

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): share the "New 1 Player" menu item
	between Maemo and GNOME

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): removed the glade_xml from the code

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the main window
	* src/ui/ui-main.c: (ui_main_new): don't use glade for the main window
	anymore

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: remove the old vbox (it's not used
	anymore)
	* src/ui/ui-main.c: (ui_main_new): don't replace the old vbox, just
	create the new one; don't load the glade UI for Maemo
